--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,7 +1,8 @@
 html,
 body {
   padding: 0;
-  margin: 0;
+  margin: 20px 20px;
+  
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
